css/style.css
html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}

article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
  font-family: 'Playfair Display', serif;
  line-height: 1;
  height: 100%;
  display: flex;
  flex-direction: column;
}
html {
  height: 100%;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}

.container-fluid {
  padding: 0;
  min-height: 100%;
  flex: 1 0 auto;
}

.container-fluid:after {
  content: '';
  display: block;
  height: 7rem;
  margin-bottom: 3rem;
}

.navbar {
  background-color: #848484;
  height: 10vh;
  font-size: 1.5rem;
}

.navbar-brand {
  font-size: 1.8rem;
}

.content {
  margin-top: 10vh;
  padding-bottom: -7rem;
}

.banner {
  background-color: rgba(132, 132, 132, .3);
}

.banner-img {
  width: 100%;
  height: 60vh;
  opacity: .8
}

.contact-header {
  margin-top: 15vh;
}

.contact-headline {
  font-size: 2rem;
  font-weight: bolder;
  color: #46B477;
}

.contact-form {
  background-color: rgba(70, 130, 180, .3);
  padding: 2rem;
  border-radius: 2rem;
}

.icons {
  display: inline-block;
  margin-right: 1rem;
  color: rgba(255, 255, 255, .8);
  font-size: 1.3rem;
}

.title {
  font-size: 4rem;
  margin: 2rem;
  color: #333;
}

hr {
  height: .1rem;
  width: 100%;
  color: #333;
  background-color: #333;
}

.summary {
  margin: 2rem 0;
  font-size: 1.3rem;
}

.summary-text {
  width: 60%;
  margin: 0 auto;
  font-size: 1.3rem;
}

.summary-text > p {
  margin: 2rem 0;
}

.services {
  margin-top: 4rem;
}

.sub-title {
  font-size: 2.5rem;
  margin: 2rem;
}

.list-group {
  text-align: center;
  width: 40%;
  margin: 0 auto;
}

.img-cont {
  height: 80vh;
  text-align: center;
}

.footer {
  background-color: #848484;
  height: 7rem;
  width: 100%;
  padding: 1rem;
  color: rgba(255, 255, 255, .8);
  display: flex;
  flex-direction: row;
  justify-content: space-evenly;
  flex-shrink: 0;
  align-self: flex-end;
}

.footer-name {
  font-size: 1.8rem;
}

.gallery {
  text-align: center;
  margin-top: 8rem;
  display: grid;
  grid-template-areas: 
  'img1 img2 img3 img4'
  'img5 img6 img7 img8'
  'img9 img10 img11 img12'
  ;
  margin-bottom: 7rem;
}

.gallery-title {
  margin-top: 7rem;
}

.gallery-img {
  display: block;
  box-shadow: .5rem .5rem #333;
  height: 80%;
  width: 80%;
  margin: 2rem;
}

.gallery-img:hover {
  cursor: pointer;
  opacity: 40%;
  box-shadow: .5rem .5rem #bbb;
}

.vl {

}

.services-list {
  margin: 0 auto;
  text-align: center;
  display: grid;
  grid-template-areas: 
  'card1 card2'
  'card3 card4'
  'card5 card6'
  'card7 card8'
  ;
  justify-items: center;
}

.card {
  margin: 2rem;
  border: 1px #848484 solid;
  border-radius: 1rem;
  width: 25rem;
}

.card1 {
  grid-area: card1;
}

.card2 {
  grid-area: card2;
}

.card3 {
  grid-area: card3;
}

.card4 {
  grid-area: card4;
}

.card5 {
  grid-area: card5;
}

.card6 {
  grid-area: card6;
}

.card7 {
  grid-area: card7;
}

.card8 {
  grid-area: card8;
}

.card-title {
  font-size: 2rem;
  font-weight: bold;
}

.card-left {
  box-shadow: -.5rem .5rem .7rem #333;
}

.card-right {
  box-shadow: .5rem .5rem .7rem #333;
}

.card-line {
    border: 0;
    height: 1px;
    background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
}

#img1 {
  grid-area: img1
}

#img2 {
  grid-area: img2
}

#img3 {
  grid-area: img3
}

#img4 {
  grid-area: img4
}

#img5 {
  grid-area: img5
}

#img6 {
  grid-area: img6
}

#img7 {
  grid-area: img7
}

#img8 {
  grid-area: img8
}

#img9 {
  grid-area: img9
}

#img10 {
  grid-area: img10
}

#img11 {
  grid-area: img11
}

#img12 {
  grid-area: img12
}

.modal-lg {
  height: 100vh;
}

.modal {
  height: 100vh;
}

.modal-open .modal {
  overflow: hidden;
}


.modal-body {
  height: 100%;
}

.modal-img {
  height: 100%;
  width: 100%;
}

/* SCREEN BREAKPOINTS */

@media only screen and (max-width: 991px) {
  .navbar {
    display: flex; 
    flex-direction: row;
    justify-content: space-between;
  }

  .navbar-collapse {
    position: absolute;
    top: 6rem;
    background-color: #ddd;
    flex-basis: 0;
    flex-grow: 0;
    border-radius: 5px;
    padding: 1rem;
  }

  .navbar-dark .navbar-nav .nav-link {
    color: #333;
  }

  .navbar-dark .navbar-nav .active > .nav-link{
    color: #666;
  }

  .navbar-nav {
    width: 20vw;
  }

  .collapse {
    order: 1;
  }

  .navbar-brand {
    position: relative;
    right: -3.5rem;
    order: 2;
  }

  .icon-cont {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    flex-wrap: wrap;
    order: 3;
  }

  .icons {
    margin: 0;
  }
}

@media only screen and (max-width: 767px) {
  
  .container {
    max-width: 90%;
  }

  .img-cont {
    height: 100%;
  }

  .gallery {
    width: 100%;
  }

  .modal-img {
    max-height: 50vh;
  }

  .modal-body {
    max-height: 60vh;
  }

  .modal-lg {
    max-height: 100%;
  }

  .modal {
    max-height: 70vh;
  }
}

@media only screen and (max-width: 750px) {

  .services-list {
    margin: 0 auto;
  }
  
  .footer {
    display: grid;
    grid-template-areas: 
    'name hours contact'
    'address hours contact'
    ;
  }

  .footer-name {
    grid-area: name;
  }

  .footer-address {
    grid-area: address;
  }

  .footer-hours {
    grid-area: hours;
  }

  .footer-contact {
    grid-area: contact;
  }

}

@media only screen and (max-width: 650px) {

  .navbar {
    display: grid;
    grid-template-areas: 
    'nav name'
    'nav contact'
    ;
  }

  .navbar-brand {
    grid-area: name;
    position: static;
    right: 0;
    justify-content: end;
    margin: 0;
  }

  .navbar-toggler {
    grid-area: nav;
  }

  .icon-cont {
    grid-area: contact;
    justify-self: end;
  }

  .services-list {
    display: flex;
    flex-direction: column;
    align-items: center;
  }

  .card {
    width: 80%;
  }

  .card-left, .card-right {
    box-shadow: 0 .5rem .7rem #333;
  }

  .gallery {
    grid-template-areas: 
    'img1 img2'
    'img3 img4'
    'img5 img6'
    'img7 img8'
    'img9 img10'
    'img11 img12'
    ;
  }

  .footer-address {
    display: none;
  }

  .footer {
    display: grid;
    grid-template-areas: 
    'name hours'
    'contact hours'
    ;
  }

  .footer-name {
    grid-area: name;
  }

  .footer-hours {
    grid-area: hours;
  }

  .footer-contact {
    grid-area: contact;
  }
}

@media only screen and (max-width: 550px) {
  .gallery {
    display: flex; 
    flex-direction: column;
    align-items: center;
  }
}

@media only screen and (max-width: 450px) {
  .navbar-brand {
    font-size: 1.3rem;
  }

  .icons {
    font-size: 1rem;
  }

  .banner-img {
    height: 40vh;
  }

  .title {
    font-size: 3rem;
  }
}

@media only screen and (max-width: 345px) {
  .navbar-collapse {
    width: 8rem;
  }

  .footer {
    height: 9rem;
  }
}

@media only screen and (max-width: 305px) {
  .footer {
    padding-bottom: 10rem;
  }
}

@media only screen and (max-width: 280px) {
  .footer {
    padding-bottom: 11rem;
  }
}

@media only screen and (max-height: 650px) {
  .navbar {
    height: 12vh;
  }
} 

